--- a/index.html
+++ b/index.html
@@ -22,115 +22,115 @@
         <div class="row gy-2 gx-2">
             <div class="col-md-6">
 <div class="row gy-5">
-    <div class="col-md-3  rounded-button    ">
+    <div class="col-3  rounded-button    ">
         <a class="btn  d-flex align-items-center  justify-content-center   btn-dark  text-decoration-none text-white  fw-bold " href="./problem1&2.html">
             P1&2
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle   ">
+    <div class="col-3 rounded-button rounded-circle   ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem3.html">
             P3
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle   ">
+    <div class="col-3 rounded-button rounded-circle   ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem4.html">
             P4
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle   ">
+    <div class="col-3 rounded-button rounded-circle   ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem5.html">
             P5
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem6&7.html">
             P6&7
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn   d-flex align-items-center  justify-content-center btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem8.html">
             P8
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem9.html">
             P9
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem10.html">
             P10
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem11.html">
             P11
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem12.html">
             P12
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem13.html">
             P13
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem14.html">
             P14
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem15.html">
             P15
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem16.html">
             P16
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem17.html">
             P17
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem18.html">
             P18
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem19.html">
             P19
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn  d-flex align-items-center  justify-content-center  btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem20.html">
             P20
         </a>
 
     </div>
-    <div class="col-md-3 rounded-button rounded-circle    ">
+    <div class="col-3 rounded-button rounded-circle    ">
         <a class="btn d-flex align-items-center  justify-content-center   btn-dark rounded-2 text-decoration-none text-white  fw-bold d-block" href="./problem21.html">
             P21
         </a>
