--- a/problem1&2.html
+++ b/problem1&2.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="container w-50 bg-danger rounded-3 py-4 my-5">
+    <div class="container w-50  bg-danger rounded-3 py-4 my-5">
         <h3 class="fw-bold my-4 text-black text-center">
             Write a number and I will tell you if this number can be divided by 3 & 4 or not
         </h3>
@@ -27,12 +27,13 @@
 
     <div class="button-container text-center mt-3">
         <a class="btn btn-primary" href="./index.html">
-            <i class="fas fa-arrow-left"></i> Go to Main Page
+            <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
         <a class="btn btn-success" href="./problem3.html">
-            Go to Next Problem <i class="fas fa-arrow-right"></i>
+            <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
+    
     
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="./js/p1.js"></script>
