--- a/problem13.html
+++ b/problem13.html
@@ -46,10 +46,10 @@
 
     <div class="button-container text-center mt-3">
         <a class="btn btn-primary" href="./index.html">
-            <i class="fas fa-arrow-left"></i> Go to Main Page
+            <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem14.html">
-            Go to Next Problem <i class="fas fa-arrow-right"></i>
+        <a class="btn btn-success" href="./problem3.html">
+            <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
     
