--- a/problem14.html
+++ b/problem14.html
@@ -42,13 +42,12 @@
 
     <div class="button-container text-center mt-3">
         <a class="btn btn-primary" href="./index.html">
-            <i class="fas fa-arrow-left"></i> Go to Main Page
+            <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem15.html">
-            Go to Next Problem <i class="fas fa-arrow-right"></i>
+        <a class="btn btn-success" href="./problem3.html">
+            <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
-    
     <script src="./js/p14.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
