--- a/problem18.html
+++ b/problem18.html
@@ -31,13 +31,12 @@
             <p id="max" class="bold text-dark h5 mt-3"></p> 
         </div>
     </div>
-
     <div class="button-container text-center mt-3">
         <a class="btn btn-primary" href="./index.html">
-            <i class="fas fa-arrow-left"></i> Go to Main Page
+            <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem19.html">
-            Go to Next Problem <i class="fas fa-arrow-right"></i>
+        <a class="btn btn-success" href="./problem3.html">
+            <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
 
