--- a/problem5.html
+++ b/problem5.html
@@ -31,7 +31,7 @@
         <a class="btn btn-primary" href="./index.html">
             <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem3.html">
+        <a class="btn btn-success" href="./problem6&7.html">
             <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
