--- a/problem13.html
+++ b/problem13.html
@@ -18,22 +18,22 @@
         <div id="problem-container" class="d-flex flex-column align-items-center justify-content-center">
             <form id="formThirteen" class="text-center">
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-md-4 mb-md-0 mb-3">
                         <input required class="form-control" type="number" id="subjectOne" max="100" placeholder="Enter Subject One Mark">
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 mb-md-0 mb-3">
                         <input required class="form-control" type="number" id="subjectTwo" max="100" placeholder="Enter Subject Two Mark">
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <input required class="form-control" type="number" id="subjectThree" max="100" placeholder="Enter Subject Three Mark">
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-md-4 mb-md-0 mb-3">
                         <input required class="form-control" type="number" id="subjectFour" max="100" placeholder="Enter Subject Four Mark">
                     </div>
                     <!-- <div class="col-4"></div> -->
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <input required class="form-control" type="number" id="subjectFive" max="100" placeholder="Enter Subject Five Mark">
                     </div>
                 </div>
@@ -48,7 +48,7 @@
         <a class="btn btn-primary" href="./index.html">
             <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem3.html">
+        <a class="btn btn-success" href="./problem14.html">
             <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
