--- a/problem15.html
+++ b/problem15.html
@@ -17,22 +17,22 @@
         
         <div id="problem-Fifteen-container" class="d-flex align-items-center justify-content-center">
             <form action="" id="formFifteen" class="text-center">
-                <div class="row mb-3">
-                    <div class="col-4">
+                <div class="row mb-md-3 ">
+                    <div class="col-md-4 mb-md-0 mb-3">
                         <input required class="form-control my-2" type="number" id="subjectOne" max="100" placeholder="Enter Physics Mark">
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4 mb-md-0 mb-3">
                         <input required class="form-control my-2" type="number" id="subjectTwo" max="100" placeholder="Enter Chemistry Mark">
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4  mb-md-0 mb-3">
                         <input required class="form-control my-2" type="number" id="subjectThree" max="100" placeholder="Enter Biology Mark">
                     </div>
                 </div>
                 <div class="row mb-3">
-                    <div class="col-4">
+                    <div class="col-md-4  mb-md-0 mb-3">
                         <input required class="form-control my-2" type="number" id="subjectFour" max="100" placeholder="Enter Mathematics Mark">
                     </div>
-                    <div class="col-4">
+                    <div class="col-md-4">
                         <input required class="form-control my-2" type="number" id="subjectFive" max="100" placeholder="Enter Computer Mark">
                     </div>
                 </div>
@@ -48,7 +48,7 @@
         <a class="btn btn-primary" href="./index.html">
             <i class="fas fa-arrow-left"></i> <span class="button-text">Go to Main Page</span>
         </a>
-        <a class="btn btn-success" href="./problem3.html">
+        <a class="btn btn-success" href="./problem16.html">
             <span class="button-text">Go to Next Problem</span> <i class="fas fa-arrow-right"></i>
         </a>
     </div>
